@@ -623,6 +623,19 @@ sub apache {
         );
     }
 
+    # Apache PerlPostConfigRequire scripts *must* compile otherwise apache startup silently fails
+    my @captive_portal = `perl -c $lib_dir/pf/web/captiveportal_modperl_require.pl 2>&1`;
+    if ($captive_portal[0] !~ /syntax OK$/) {
+        add_problem( 
+            $FATAL, "Apache will fail to start! $lib_dir/pf/web/captiveportal_modperl_require.pl doesn't compile"
+        );
+    }
+    my @back_end = `perl -c $lib_dir/pf/web/backend_modperl_require.pl 2>&1`;
+    if ($back_end[0] !~ /syntax OK$/) {
+        add_problem( 
+            $FATAL, "Apache will fail to start! $lib_dir/pf/web/backend_modperl_require.pl doesn't compile"
+        );
+    }
 }
 
 =item violations
